--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "lucide-react": "^0.560.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.8.0"
+    "react-router": "^7.8.0",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-router-hash-link": "^2.4.9",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
