--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "vite",
-    "dev:server": "nodemon",
+    "dev:server": "nodemon --exec ts-node server/index.ts",
     "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
