--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@formspree/react": "^3.0.0",
     "@mui/material": "^7.3.6",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
