--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@formspree/react": "^3.0.0",
     "@mui/material": "^7.3.6",
     "@supabase/supabase-js": "^2.48.0",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
